--- a/changelogs/v1.1.0.md
+++ b/changelogs/v1.1.0.md
@@ -5,7 +5,16 @@
 [#19](https://github.com/SimSolutions1/Issue-Tracker/issues/19) - Throttle is now set based on power lever position<br>
 [#21](https://github.com/SimSolutions1/Issue-Tracker/issues/21) - Added warning messages to G1000<br>
 [#23](https://github.com/SimSolutions1/Issue-Tracker/issues/23) - Added custom G1000 popouts<br>
+[#25](https://github.com/SimSolutions1/Issue-Tracker/issues/25) - Added macOS support<br>
 [#30](https://github.com/SimSolutions1/Issue-Tracker/issues/30) - Added saitek panel config (may need tweaking - not final)
+
+## Minor Changes
+<div>
+- Added plugin version of libradio<br>
+- Some manipulators have been simplified<br>
+- Overhauled text rendering system<br>
+- Electrical system changes
+</div>
 
 ## Fixes
 [#12](https://github.com/SimSolutions1/Issue-Tracker/issues/12) - Fixed bug where the dome and instrument lighting knobs snapped to 0 when the battery was turned off<br>
