--- a/changelogs/v1.1.0.md
+++ b/changelogs/v1.1.0.md
@@ -18,6 +18,6 @@
 
 ## Fixes
 [#12](https://github.com/SimSolutions1/Issue-Tracker/issues/12) - Fixed bug where the dome and instrument lighting knobs snapped to 0 when the battery was turned off<br>
-[#18](https://github.com/SimSolutions1/Issue-Tracker/issues/18) - Engine & flight model tweaks (not final)
+[#18](https://github.com/SimSolutions1/Issue-Tracker/issues/18) - Engine & flight model tweaks (not final)<br>
 [#24](https://github.com/SimSolutions1/Issue-Tracker/issues/24) - Fixed bug where throttle would not work after switching into a new plane<br>
-[#28](https://github.com/SimSolutions1/Issue-Tracker/issues/28) - Fixed bug where a switch and its guard were synced<br>
+[#28](https://github.com/SimSolutions1/Issue-Tracker/issues/28) - Fixed bug where a switch and its guard were synced
