--- a/changelogs/v1.1.0.md
+++ b/changelogs/v1.1.0.md
@@ -1,23 +1,20 @@
-**this is an unreleased version, as a result, this WILL change**
-
 ## Features
-[#5](https://github.com/SimSolutions1/Issue-Tracker/issues/5) - Added missing system & fuel pages to G1000<br>
-[#19](https://github.com/SimSolutions1/Issue-Tracker/issues/19) - Throttle is now set based on power lever position<br>
-[#21](https://github.com/SimSolutions1/Issue-Tracker/issues/21) - Added warning messages to G1000<br>
-[#23](https://github.com/SimSolutions1/Issue-Tracker/issues/23) - Added custom G1000 popouts<br>
-[#25](https://github.com/SimSolutions1/Issue-Tracker/issues/25) - Added macOS support<br>
-[#30](https://github.com/SimSolutions1/Issue-Tracker/issues/30) - Added saitek panel config (may need tweaking - not final)
+- Added missing system & fuel pages to G1000
+- Throttle is now set based on power lever position
+- Added warning messages to G1000
+- Added custom G1000 popouts
+- Added macOS support
 
 ## Minor Changes
-<div>
-- Added plugin version of libradio<br>
-- Some manipulators have been simplified<br>
-- Overhauled text rendering system<br>
+- Added plugin version of libradio
+- Some manipulators have been simplified
+- Overhauled text rendering system
 - Electrical system changes
-</div>
+- Changed how datarefs are handled internally
+- Added saitek panel config (may need tweaking - not final)
 
 ## Fixes
-[#12](https://github.com/SimSolutions1/Issue-Tracker/issues/12) - Fixed bug where the dome and instrument lighting knobs snapped to 0 when the battery was turned off<br>
-[#18](https://github.com/SimSolutions1/Issue-Tracker/issues/18) - Engine & flight model tweaks (not final)<br>
-[#24](https://github.com/SimSolutions1/Issue-Tracker/issues/24) - Fixed bug where throttle would not work after switching into a new plane<br>
-[#28](https://github.com/SimSolutions1/Issue-Tracker/issues/28) - Fixed bug where a switch and its guard were synced
+- Fixed bug where the dome and instrument lighting knobs snapped to 0 when the battery was turned off
+- Engine & flight model tweaks (not final)
+- Fixed bug where throttle would not work after switching into a new plane
+- Fixed bug where a switch and its guard were synced
